Copia do MQTT Dashboard

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,7 @@
-NAME=DONSKYTECH
+NAME=Eco_Octano
 DASHBOARD_TITLE=MQTT DASHBOARD
-MQTT_BROKER=ws://127.0.01:9001/mqtt
-MQTT_TOPIC=sensorReadings
+MQTT_BROKER=galileu.eletrica.ufpr.br
+MQTT_PORT=2283
+MQTT_USERNAME=pet
+MQTT_PASSWORD=112358
+MQTT_TOPIC=telemetria/dados
